--- a/Tema pentru 21-12-2020 (bubble animation)/style.css
+++ b/Tema pentru 21-12-2020 (bubble animation)/style.css
@@ -12,6 +12,7 @@ header{
     background: url(cola.jpg);
     background-size: cover;
 }
+
 .cover{
     background-color: #000;
     opacity: 0.4;
@@ -29,7 +30,9 @@ h1{
     position: relative;
 }
 
-.wrapper1 span{
+
+/* First bubble animation */
+.wrapper-1 span{
     position: fixed;
     left: 20%;
     bottom: 56.5%;
@@ -38,107 +41,107 @@ h1{
     height: 0.7em;
     width: 0.7em;
     border-radius: 50%;
-    animation: animate1 1s linear infinite;
+    animation: animate-1 1s linear infinite;
 }
 
 
 /* letter B */
-.wrapper1 span:nth-child(1){
-    transform: translate(35.5em, 5.3em);
+.wrapper-1 span:nth-child(1){
+    transform: translate(35.5em, 4.6em);
     animation-delay: 1s;
 }
 
-.wrapper1 span:nth-child(2){
-    transform: translate(35.5em, 2.3em);
+.wrapper-1 span:nth-child(2){
+    transform: translate(35.5em, 2.1em);
     animation-delay: 2.5s;
 }
 
-.wrapper1 span:nth-child(3){
-    transform: translate(37.56em, 2.8em);
+.wrapper-1 span:nth-child(3){
+    transform: translate(37.56em, 4em);
     animation-delay: 3.6s;
 }
 
 /* Letter U */
-.wrapper1 span:nth-child(4){
-    transform: translate(39em, 3.5em);
+.wrapper-1 span:nth-child(4){
+    transform: translate(39em, 5em);
     animation-delay: 3s;
 }
 
-.wrapper1 span:nth-child(5){
-    transform: translate(39.2em, 2.1em);
+.wrapper-1 span:nth-child(5){
+    transform: translate(39em, 3.4em);
     animation-delay: 3.7s;
 }
 
-.wrapper1 span:nth-child(6){
-    transform: translate(40.6em, 3em);
+.wrapper-1 span:nth-child(6){
+    transform: translate(40.6em, 3.9em);
     animation-delay: 1s;
 }
 
 /* Letter B */
-.wrapper1 span:nth-child(7){
-    transform: translate(42.23em, 5.4em);
+.wrapper-1 span:nth-child(7){
+    transform: translate(42.23em, 4.9em);
     animation-delay: 1s;
 }
 
-.wrapper1 span:nth-child(8){
-    transform: translate(42.23em, 3em);
+.wrapper-1 span:nth-child(8){
+    transform: translate(42.23em, 2.3em);
     animation-delay: 2.4s;
 }
 
-.wrapper1 span:nth-child(9){
-    transform: translate(44.23em, 2.37em);
+.wrapper-1 span:nth-child(9){
+    transform: translate(44.23em, 4.7em);
     animation-delay: 2.7s;
 }
 
 /* letter B */
-.wrapper1 span:nth-child(10){
+.wrapper-1 span:nth-child(10){
     transform: translate(45.76em, 4.7em);
     animation-delay: 1.1s;
 }
 
-.wrapper1 span:nth-child(11){
+.wrapper-1 span:nth-child(11){
     transform: translate(45.76em, 2.3em);
     animation-delay: 2s;
 }
 
-.wrapper1 span:nth-child(12){
+.wrapper-1 span:nth-child(12){
     transform: translate(47.7em, 3.6em);
     animation-delay: 3s;
 }
 
 /* letter l */
-.wrapper1 span:nth-child(13){
-    transform: translate(49.3em, 5.6em);
+.wrapper-1 span:nth-child(13){
+    transform: translate(49.3em, 4.9em);
     animation-delay: 1.6s;
 }
 
-.wrapper1 span:nth-child(14){
-    transform: translate(49.3em, 3.9em);
+.wrapper-1 span:nth-child(14){
+    transform: translate(49.3em, 3.5em);
     animation-delay: 2.4s;
 }
 
-.wrapper1 span:nth-child(15){
-    transform: translate(49.3em, 2.4em);
+.wrapper-1 span:nth-child(15){
+    transform: translate(49.3em, 1.8em);
     animation-delay: 3.4s;
 }
 
 /* letter Y */
-.wrapper1 span:nth-child(16){
-    transform: translate(50.7em, 3.7em);
+.wrapper-1 span:nth-child(16){
+    transform: translate(50.7em, 3.4em);
     animation-delay: 1.8s;
 }
 
-.wrapper1 span:nth-child(17){
-    transform: translate(52.23em, 3.2em);
+.wrapper-1 span:nth-child(17){
+    transform: translate(52.23em, 3.9em);
     animation-delay: 2.2s;
 }
 
-.wrapper1 span:nth-child(18){
-    transform: translate(51.36em, 1.3em);
+.wrapper-1 span:nth-child(18){
+    transform: translate(51.29em, 6em);
     animation-delay: 3s;
 }
 
-@keyframes animate1{
+@keyframes animate-1{
     
         0%{
             margin-bottom: 0;
@@ -165,7 +168,8 @@ h1{
     }
 
 
-.wrapper span{
+/* Second bubble animation */
+.wrapper-2 span{
     position: fixed;
     bottom: -28em;
     opacity: 0;
@@ -174,115 +178,115 @@ h1{
     border-radius: 50%;
     background-color: transparent;
     border: 2px solid #ffffff;
-    /* animation: animate 1.9s linear infinite; */
+    /* animation: animate-2 1.9s linear infinite; */
 }
 
-.wrapper span:nth-child(1){
+.wrapper-2 span:nth-child(1){
     left: 0;
     animation-delay: .6s;
 }
 
-.wrapper span:nth-child(2){
+.wrapper-2 span:nth-child(2){
     left: 5%;
     animation-delay: 3s;
 }
 
-.wrapper span:nth-child(3){
+.wrapper-2 span:nth-child(3){
     left: 10%;
     animation-delay: 2s;
 }
 
-.wrapper span:nth-child(4){
+.wrapper-2 span:nth-child(4){
     left: 15%;
     animation-delay: .1s;
 }
 
-.wrapper span:nth-child(5){
+.wrapper-2 span:nth-child(5){
     left: 20%;
     animation-delay: .4s;
 }
 
-.wrapper span:nth-child(6){
+.wrapper-2 span:nth-child(6){
     left: 25%;
     animation-delay: 7s;
 }
 
-.wrapper span:nth-child(7){
+.wrapper-2 span:nth-child(7){
     left: 30%;
     animation-delay: .3s;
 }
 
-.wrapper span:nth-child(8){
+.wrapper-2 span:nth-child(8){
     left: 35%;
     animation-delay: 3s;
 }
 
-.wrapper span:nth-child(9){
+.wrapper-2 span:nth-child(9){
     left: 40%;
     animation-delay: 6s;
 }
 
-.wrapper span:nth-child(10){
+.wrapper-2 span:nth-child(10){
     left: 45%;
     animation-delay: .4s;
 
 }
 
-.wrapper span:nth-child(11){
+.wrapper-2 span:nth-child(11){
     left: 50%;
     animation-delay: .6s;
 
 }
 
-.wrapper span:nth-child(12){
+.wrapper-2 span:nth-child(12){
     left: 55%;
     animation-delay: 3s;
 
 }
 
-.wrapper span:nth-child(13){
+.wrapper-2 span:nth-child(13){
     left: 60%;
     animation-delay: 6s;
 
 }
 
-.wrapper span:nth-child(14){
+.wrapper-2 span:nth-child(14){
     left: 65%;
     animation-delay: 2s;
 
 }
 
-.wrapper span:nth-child(15){
+.wrapper-2 span:nth-child(15){
     left: 70%;
     animation-delay: .6s;
 
 }
 
-.wrapper span:nth-child(16){
+.wrapper-2 span:nth-child(16){
     left: 75%;
     animation-delay: 3s;
 
 }
 
-.wrapper span:nth-child(17){
+.wrapper-2 span:nth-child(17){
     left: 80%;
     animation-delay: 8s;
 
 }
 
-.wrapper span:nth-child(18){
+.wrapper-2 span:nth-child(18){
     left: 85%;
     animation-delay: 4.2s;
 
 }
 
-.wrapper span:nth-child(19){
+.wrapper-2 span:nth-child(19){
     left: 90%;
     animation-delay: 2.4s;
 
 }
 
-.wrapper span:nth-child(20){
+.wrapper-2 span:nth-child(20){
     left: 95%;
     animation-delay: 9s;
 
@@ -290,7 +294,7 @@ h1{
 
 
 
-@keyframes animate{
+@keyframes animate-2{
     0%{
         bottom: 0;
         margin-left: 90px;
